# fastobo-graphs

./: .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
ci/: codecov.yml
ci/travis/: deploy.sh  install.sh  script.sh
examples/: convert.rs  graph2obo.rs
src/: constants.rs  error.rs  lib.rs  model.rs  obo.rs  utils.rs
src/from_graph/: doc.rs  entity.rs  header.rs  mod.rs  syn.rs  xref.rs
src/into_graph/: doc.rs  entity.rs  header.rs  mod.rs  pv.rs
tests/: examples.rs  foundry.rs  regression.rs
tests/convert/: header_data_version.json  header_data_version.obo  header_date.json  header_date.obo  header_default_namespace.json  header_default_namespace.obo  header_format_version.json  header_format_version.obo  header_namespace_id_rule.json  header_namespace_id_rule.obo  header_remark.json  header_remark.obo  header_saved_by.json  header_saved_by.obo  header_subsetdef.json  header_subsetdef.obo  header_synonymtypedef.json  header_synonymtypedef.obo  mod.rs
tests/data/: issue20.json
