[package]
name = "fastobo-graphs"
version = "0.4.0"
authors = ["Martin Larralde <martin.larralde@ens-paris-saclay.fr>"]
edition = "2018"
license = "MIT"
description = "OBO Graphs data model, decoder and encoder in Rust."
repository = "https://github.com/fastobo/fastobo-graphs"
homepage = "https://github.com/fastobo/fastobo-graphs"
readme = "README.md"
keywords = ["obo", "graphs", "ontology", "serde", "parser"]
categories = ["science", "parser-implementations"]
exclude = ["obographs"]

[badges.travis-ci]
repository = "fastobo/fastobo-graphs"
[badges.codecov]
repository = "fastobo/fastobo-graphs"
service    = "github"
[badges.is-it-maintained-issue-resolution]
repository = "fastobo/fastobo-graphs"
[badges.maintenance]
status     = "actively-developed"

[package.metadata.docs.rs]
features = [ "_doc", "obo" ]

[dependencies]
serde_yaml = "0.8"
serde_json = "1.0"
err-derive = "0.2"
serde = { version = "1.0", features = ["derive"] }
fastobo = { version = "0.11.0", optional = true }
mashup = { version = "0.1.9", optional = true }

[dev-dependencies]
lazy_static = "1.3"
pretty_assertions = "0.6.1"
obofoundry = "0.6"
serde_json = "1.0"
serde_yaml = "0.8"
ureq = "1.0"
fastobo = "0.11.0"
mashup = "0.1.9"

[features]
default = ["obo"]
obo = ["fastobo", "mashup"]
_doc = ["obo"]

[[test]]
name = "convert"
path = "tests/convert/mod.rs"
required-features = ["obo"]
